kubernetes/main/apps/home/syncthing/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: syncthing
  namespace: home
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: syncthing
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/name: traefik
            app.kubernetes.io/instance: traefik-networking
      toPorts:
        - ports:
            - port: "8384"
              protocol: TCP
    # LAN/WAN peers via the sync LB
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "22000"
              protocol: TCP
            - port: "22000"
              protocol: UDP
            - port: "21027"
              protocol: UDP
  egress:
    # peers, relays and global discovery on arbitrary ports
    - toEntities: ["world"]
